# mycloud

./: mycloud.cabal
postgres/: MyCloud.sql
proto/: MyCloud.proto
src/: MyCloud.hs
src/MyCloud/: Connection.hs  DB.hs  Files.hs  Proto.hs  Types.hs
src/MyCloud/Internal/: Types.hs
